# minelib

./: .gitignore  README.md  pyproject.toml
mclib/server/: paper.py  spigot.py  vanilla.py
minelib/server/: paper.py  server.py  spigot.py  vanilla.py
tests/: test_mclib.py  test_minelib.py
