[tool.poetry]
name = "minelib"
version = "0.1.7"
description = "An unofficial python library for Minecraft"
authors = ["Manuel Quarneti <manuelquarneti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
